--- a/briar-android/res/layout/list_item_introduction_in.xml
+++ b/briar-android/res/layout/list_item_introduction_in.xml
@@ -14,29 +14,29 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="left|start"
-		android:background="@drawable/notice_in"
 		android:layout_marginLeft="@dimen/message_bubble_margin_tail"
-		android:layout_marginRight="@dimen/message_bubble_margin_non_tail">
+		android:layout_marginRight="@dimen/message_bubble_margin_non_tail"
+		android:background="@drawable/notice_in">
 
 		<TextView
 			android:id="@+id/introductionText"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:minWidth="80dp"
+			android:textColor="@color/briar_text_secondary"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
 			android:textStyle="italic"
-			android:textColor="@color/briar_text_secondary"
 			tools:text="@string/introduction_request_received"/>
 
 		<TextView
 			android:id="@+id/introductionTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:layout_alignEnd="@+id/introductionText"
 			android:layout_alignRight="@+id/introductionText"
 			android:layout_below="@+id/declineButton"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:textColor="@color/private_message_date"
 			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
@@ -56,8 +56,8 @@
 			style="@style/BriarButtonFlat.Negative"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="-15dp"
 			android:layout_below="@+id/introductionText"
+			android:layout_marginBottom="-15dp"
 			android:layout_toLeftOf="@+id/acceptButton"
 			android:layout_toStartOf="@+id/acceptButton"
 			android:text="@string/decline"/>
