--- a/briar-android/res/layout/list_item_msg_out.xml
+++ b/briar-android/res/layout/list_item_msg_out.xml
@@ -11,9 +11,9 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="right|end"
-		android:background="@drawable/msg_out"
 		android:layout_marginLeft="@dimen/message_bubble_margin_non_tail"
-		android:layout_marginRight="@dimen/message_bubble_margin_tail">
+		android:layout_marginRight="@dimen/message_bubble_margin_tail"
+		android:background="@drawable/msg_out">
 
 		<TextView
 			android:id="@+id/msgBody"
@@ -28,11 +28,11 @@
 			android:id="@+id/msgTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:layout_alignParentLeft="true"
 			android:layout_alignParentStart="true"
 			android:layout_below="@+id/msgBody"
-			android:singleLine="true"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
+			android:maxLines="1"
 			android:textColor="@color/private_message_date_inverse"
 			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
