--- a/briar-android/res/layout/list_item_msg_notice_out.xml
+++ b/briar-android/res/layout/list_item_msg_notice_out.xml
@@ -6,36 +6,44 @@
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
 
-	<include
-		android:id="@+id/messageLayout"
-		layout="@layout/list_item_msg_out"/>
+	<TextView
+		android:id="@+id/msgBody"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/message_bubble_margin_non_tail"
+		android:layout_marginRight="@dimen/message_bubble_margin_tail"
+		android:background="@drawable/msg_out_top"
+		android:textColor="@color/briar_text_primary_inverse"
+		android:textIsSelectable="true"
+		android:textSize="@dimen/text_size_medium"
+		tools:text="This is a long long long message that spans over several lines.\n\nIt ends here."/>
 
 	<RelativeLayout
-		android:layout_width="wrap_content"
+		android:id="@+id/noticeLayout"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_gravity="right|end"
-		android:background="@drawable/notice_out"
 		android:layout_marginLeft="@dimen/message_bubble_margin_non_tail"
-		android:layout_marginRight="@dimen/message_bubble_margin_tail">
+		android:layout_marginRight="@dimen/message_bubble_margin_tail"
+		android:background="@drawable/notice_out_bottom">
 
 		<TextView
 			android:id="@+id/introductionText"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:textColor="@color/briar_text_secondary"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
 			android:textStyle="italic"
-			android:textColor="@color/briar_text_secondary"
 			tools:text="@string/introduction_request_received"/>
 
 		<TextView
 			android:id="@+id/introductionTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:layout_alignParentLeft="true"
 			android:layout_alignParentStart="true"
 			android:layout_below="@+id/introductionText"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:textColor="@color/private_message_date"
 			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
@@ -44,10 +52,10 @@
 			android:id="@+id/introductionStatus"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_toEndOf="@+id/introductionTime"
-			android:layout_toRightOf="@+id/introductionTime"
 			android:layout_alignBottom="@+id/introductionTime"
 			android:layout_marginLeft="@dimen/margin_medium"
+			android:layout_toEndOf="@+id/introductionTime"
+			android:layout_toRightOf="@+id/introductionTime"
 			tools:ignore="ContentDescription"
 			tools:src="@drawable/message_delivered"/>
 
