--- a/briar-android/res/layout/list_item_shareable_invitation_in.xml
+++ b/briar-android/res/layout/list_item_shareable_invitation_in.xml
@@ -6,37 +6,46 @@
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
 
-	<include
-		android:id="@+id/messageLayout"
-		layout="@layout/list_item_msg_in"/>
-
-	<RelativeLayout
-		android:layout_width="wrap_content"
+	<TextView
+		android:id="@+id/msgBody"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_gravity="left|start"
-		android:background="@drawable/notice_in"
 		android:layout_marginLeft="@dimen/message_bubble_margin_tail"
-		android:layout_marginRight="@dimen/message_bubble_margin_non_tail">
+		android:layout_marginRight="@dimen/message_bubble_margin_non_tail"
+		android:background="@drawable/msg_in_top"
+		android:textColor="@color/briar_text_primary"
+		android:textIsSelectable="true"
+		android:textSize="@dimen/text_size_medium"
+		tools:text="Short message"/>
+
+	<RelativeLayout
+		android:id="@+id/noticeLayout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/message_bubble_margin_tail"
+		android:layout_marginRight="@dimen/message_bubble_margin_non_tail"
+		android:background="@drawable/notice_in_bottom">
 
 		<TextView
 			android:id="@+id/introductionText"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:minWidth="80dp"
+			android:textColor="@color/briar_text_secondary"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
 			android:textStyle="italic"
-			android:textColor="@color/briar_text_secondary"
 			tools:text="@string/forum_invitation_received"/>
 
 		<TextView
 			android:id="@+id/introductionTime"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:layout_alignEnd="@+id/introductionText"
 			android:layout_alignRight="@+id/introductionText"
 			android:layout_below="@+id/showInvitationsButton"
+			android:layout_marginTop="@dimen/message_bubble_timestamp_margin"
 			android:textColor="@color/private_message_date"
 			android:textSize="@dimen/text_size_tiny"
 			tools:text="Dec 24, 13:37"/>
@@ -46,10 +55,10 @@
 			style="@style/BriarButtonFlat.Positive"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginBottom="-15dp"
 			android:layout_alignEnd="@+id/introductionText"
 			android:layout_alignRight="@+id/introductionText"
 			android:layout_below="@+id/introductionText"
+			android:layout_marginBottom="-15dp"
 			tools:text="@string/forum_show_invitations"/>
 
 	</RelativeLayout>
