--- a/briar-android/res/layout-land/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout-land/fragment_keyagreement_id.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="horizontal">
@@ -22,6 +23,7 @@
 		android:src="@drawable/qr_code_intro"/>
 
 	<ScrollView
+		android:id="@+id/scrollView"
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
 		android:layout_weight="1">
@@ -37,22 +39,6 @@
 			android:paddingStart="@dimen/margin_activity_horizontal"
 			android:paddingTop="@dimen/margin_activity_vertical">
 
-			<TextView
-				style="@style/BriarTextBody"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:text="@string/your_nickname"
-				android:visibility="gone"/>
-
-			<Spinner
-				android:id="@+id/spinner"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/margin_medium"
-				android:background="@drawable/border_spinner"
-				android:spinnerMode="dropdown"
-				android:visibility="gone"/>
-
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
@@ -65,7 +51,8 @@
 					android:layout_height="wrap_content"
 					android:adjustViewBounds="true"
 					android:padding="@dimen/margin_medium"
-					android:src="@drawable/qr_code_explanation"/>
+					android:src="@drawable/qr_code_explanation"
+					tools:ignore="ContentDescription"/>
 
 				<TextView
 					style="@style/BriarTextBody"
