--- a/briar-android/res/layout/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout/fragment_keyagreement_id.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
+	android:id="@+id/scrollView"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
 
@@ -15,22 +17,6 @@
 		android:paddingStart="@dimen/margin_activity_horizontal"
 		android:paddingTop="@dimen/margin_activity_vertical">
 
-		<TextView
-			style="@style/BriarTextBody"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:text="@string/your_nickname"
-			android:visibility="gone"/>
-
-		<Spinner
-			android:id="@+id/spinner"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_medium"
-			android:background="@drawable/border_spinner"
-			android:spinnerMode="dropdown"
-			android:visibility="gone"/>
-
 		<ImageView
 			android:id="@+id/imageView"
 			android:layout_width="match_parent"
@@ -38,7 +24,8 @@
 			android:layout_marginTop="@dimen/margin_xlarge"
 			android:adjustViewBounds="true"
 			android:scaleType="fitCenter"
-			android:src="@drawable/qr_code_intro"/>
+			android:src="@drawable/qr_code_intro"
+			tools:ignore="ContentDescription"/>
 
 		<LinearLayout
 			android:layout_width="match_parent"
