--- a/briar-android/res/layout/fragment_blog_post.xml
+++ b/briar-android/res/layout/fragment_blog_post.xml
@@ -10,7 +10,7 @@
 		android:descendantFocusability="beforeDescendants"
 		android:focusable="true"
 		android:focusableInTouchMode="true">
-		<!-- Above Focusability attributes prevent automatic scroll-down,
+		<!-- Above focusability attributes prevent automatic scroll-down,
 		     because body text is selectable -->
 
 		<include
