--- a/briar-android/res/layout/fragment_forum_list.xml
+++ b/briar-android/res/layout/fragment_forum_list.xml
@@ -10,6 +10,6 @@
 		xmlns:android="http://schemas.android.com/apk/res/android"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		app:layout_behavior="org.briarproject.android.util.BriarRecyclerViewBehavior"/>
+		app:layout_behavior="org.briarproject.android.view.BriarRecyclerViewBehavior"/>
 
 </android.support.design.widget.CoordinatorLayout>
